--- a/week1_Garbage_classification_1.ipynb
+++ b/week1_Garbage_classification_1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz3h2i1R0xvlWR3JqlFYNU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +28,18 @@
     {
       "cell_type": "code",
       "source": [
+        "!unzip -q Balanced_garbage.zip -d extracted_garbage\n",
+        "!unzip -q Imbalanced_garbage.zip -d extracted_imbalanced_garbage"
+      ],
+      "metadata": {
+        "id": "TgTXhbUB2dlU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!ls extracted_garbage\n",
         "!ls extracted_imbalanced_garbage\n"
       ],
@@ -39,7 +50,7 @@
         "id": "PQQRHkrNmnPF",
         "outputId": "d3ec5825-a390-4675-c9ba-6ca0976315ce"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +96,7 @@
         "id": "fRLY0tq4m0bS",
         "outputId": "4122752b-74b2-4224-af82-26630b42ff6f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
