--- a/week1_Garbage_classification_1.ipynb
+++ b/week1_Garbage_classification_1.ipynb
@@ -33,22 +33,10 @@
       ],
       "metadata": {
         "id": "TgTXhbUB2dlU",
-        "collapsed": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "933e72fa-9176-4041-a916-65129cab7c0e"
+        "collapsed": true
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "replace extracted_garbage/paper/paper_001.jpg? [y]es, [n]o, [A]ll, [N]one, [r]ename: replace extracted_imbalanced_garbage/cardboard/cardboard_001.jpg? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
